--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,8 @@
 
   <property name="srcDir" location="src" />
   <property name="binDir" location="bin" />
-  <property name="jarFolder" location="${user.home}/Dropbox/Java" />
-  <property name="jarFile" location="${jarFolder}/AppleFormat.jar" />
+  <property name="jarDir" location="${user.home}/Dropbox/Java" />
+  <property name="jarFile" location="${jarDir}/AppleFormat.jar" />
 
   <target name="version">
     <echo>AppleFormat.jar</echo>
